*ovirt-iso-uploader-9999 (21 Jan 2013)

  21 Jan 2013; Stijn Tintel <stijn+gentoo@linux-ipv6.be>
  +ovirt-iso-uploader-9999.ebuild:
  Initial import. Ebuild by me.